--- a/fimco/fimcosite/templates/index.html
+++ b/fimco/fimcosite/templates/index.html
@@ -7,7 +7,7 @@
                 <!-- SLIDE  -->
                 <li data-index="rs-227" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Purchase Smarty" data-description="">
                     <!-- MAIN IMAGE -->
-                    <img src="/static/img/rs5/fimcobanner4.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                    <img src="/static/img/rev_slider/home.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
 
                     <div class="tp-caption WebProduct-Title   tp-resizeme"
@@ -99,7 +99,7 @@
                 <!-- SLIDE  -->
                 <li data-index="rs-228" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500" data-thumb="assets/images/_smarty/rs5/express_bglight-100x50.jpg"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off"  data-title="Intro" data-description="">
                     <!-- MAIN IMAGE -->
-                    <img src="/static/img/rs5/fimcobanner5.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                    <img src="/static/img/rev_slider/inform.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
 
                     <div class="tp-caption WebProduct-Title   tp-resizeme"
@@ -194,7 +194,7 @@
                 <!-- SLIDE  -->
                 <li data-index="rs-229" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Examples" data-description="">
                     <!-- MAIN IMAGE -->
-                    <img src="/static/img/rs5/fimcobanner1.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                    <img src="/static/img/rev_slider/advise.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
 
                     <div class="tp-caption WebProduct-Title   tp-resizeme"
@@ -288,7 +288,7 @@
                 <!-- SLIDE  -->
                 <li data-index="rs-230" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Easy to Use" data-description="">
                     <!-- MAIN IMAGE -->
-                    <img src="/static/img/rs5/fimcobanner2.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                    <img src="/static/img/rev_slider/execute.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
 
                     <div class="tp-caption WebProduct-Title   tp-resizeme"
@@ -663,7 +663,7 @@
                         -->
 {#                        <div class="owl-carousel buttons-autohide controlls-over" data-plugin-options='{"singleItem": true, "autoPlay": 3400, "navigation": true, "pagination": true, "transitionStyle":"fadeUp"}'>#}
                             <div>
-                                <img class="img-fluid" src="/static/img/money.jpg" alt="">
+                                <img class="img-fluid" src="/static/img/welcome.jpg" alt="">
                             </div>
 {#                        </div>#}
                     </div>
