contact us added inquiry view

--- a/fimco/fimcosite/templates/about.html
+++ b/fimco/fimcosite/templates/about.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-{#                    <img class="float-left" src="/static/img/FIMCO-WEBSITE-LOGOS.png" height="250" width="250" alt="" />#}
+                    <img src="/static/img/about-us.jpg" width="100%" alt="" />
                     <div class="heading-title" id="about">
                         <h2>About Us</h2>
                     </div>
@@ -33,30 +33,30 @@
                         record of engaging with clients and regulators alike. Whether it’s to sell or hold; we work hard
                         to give our clients sufficient confidence to make this decision across various asset classes.
                     </p>
-                    <div class="col-md-3">
-                        <a class="tp-caption WebProduct-Button read-more-show"
-                            href="#"
-                            data-x="['left','left','left','left']" data-hoffset="['30','30','200','79']"
-                            data-y="['middle','middle','top','top']" data-voffset="['268','268','456','430']"
-                            data-width="none"
-                            data-height="none"
-                            data-whitespace="nowrap"
-                            data-transform_idle="o:1;"
-                            data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Linear.easeNone;"
-                            data-style_hover="c:rgba(51, 51, 51, 1.00);bg:rgba(0, 42, 84, 1.00);"
-
-                            data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;"
-                            data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;"
-                            data-start="1750"
-                            data-splitin="none"
-                            data-splitout="none"
-                            data-actions=''
-                            data-responsive_offset="on"
-                            data-responsive="off"
-
-                            style="z-index: 9; white-space: nowrap;letter-spacing:1px;">Play Video
-                        </a>
-                    </div>
+{#                    <div class="col-md-3">#}
+{#                        <a class="tp-caption WebProduct-Button read-more-show"#}
+{#                            href="#"#}
+{#                            data-x="['left','left','left','left']" data-hoffset="['30','30','200','79']"#}
+{#                            data-y="['middle','middle','top','top']" data-voffset="['268','268','456','430']"#}
+{#                            data-width="none"#}
+{#                            data-height="none"#}
+{#                            data-whitespace="nowrap"#}
+{#                            data-transform_idle="o:1;"#}
+{#                            data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Linear.easeNone;"#}
+{#                            data-style_hover="c:rgba(51, 51, 51, 1.00);bg:rgba(0, 42, 84, 1.00);"#}
+{##}
+{#                            data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;"#}
+{#                            data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;"#}
+{#                            data-start="1750"#}
+{#                            data-splitin="none"#}
+{#                            data-splitout="none"#}
+{#                            data-actions=''#}
+{#                            data-responsive_offset="on"#}
+{#                            data-responsive="off"#}
+{##}
+{#                            style="z-index: 9; white-space: nowrap;letter-spacing:1px;">Play Video#}
+{#                        </a>#}
+{#                    </div>#}
                 </div>
                 <!-- /LEFT -->
 
