--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -111,8 +111,7 @@
 {#                                    </li>#}
                                     <li class="dropdown">
                                         <a href="{% url 'site' 'contact' %}" class="text-center" data-toggle="tooltip" data-placement="bottom" title="Contact Us">
-                                            <span>CONTACT US </span>
-{#                                            <i class="fa fa-phone fa-lg"></i>#}
+                                            CONTACT US
                                         </a>
                                     </li>
                                 </ul>
