--- a/fimco/fimcosite/templates/index.html
+++ b/fimco/fimcosite/templates/index.html
@@ -26,7 +26,7 @@
                         data-splitin="none"
                         data-splitout="none"
                         data-responsive_offset="on"
-                        style="z-index: 6; white-space: nowrap;text-align:center;">INFORM. ADVICE.<br>
+                        style="z-index: 6; white-space: nowrap;text-align:center;">INFORM. ADVISE.<br>
                         EXECUTE.
                     </div>
 
