--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -110,7 +110,7 @@
 {#                                        </ul>#}
 {#                                    </li>#}
                                     <li class="dropdown">
-                                        <a href="{% url 'site' 'contact' %}" class="text-center" data-toggle="tooltip" data-placement="bottom" title="Contact Us">
+                                        <a href="{% url 'site' 'contact' %}" data-toggle="tooltip" data-placement="bottom" title="Contact Us">
                                             CONTACT US
                                         </a>
                                     </li>
