--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -130,7 +130,7 @@
 				<div class="copyright">
 					<div class="container">
                         <div class="row">
-                            <div class="col-md-2 col-sm-2">
+                            <div class="col-md-2 col-sm-4">
                                 <!-- Footer Logo -->
 							    <img class="footer-logo footer-2" src="/static/img/fimco-footer.png" alt="" />
                             </div>
@@ -148,14 +148,14 @@
                                 FIMCO Limited is an authorised financial services provider<br>
                                 licensed by the Capital Market Security Authority.
                             </div>
-                            <div class="col-md-5 col-sm-5">
+                            <div class="col-md-5 col-sm-3">
 {#                                <ul class="float-right m-0 list-inline mobile-block">#}
 {#                                    <li><a href="{% url 'site' 'terms' %}">Terms &amp; Conditions</a></li>#}
 {#                                    <li>&bull;</li>#}
 {#                                    <li><a href="#">Privacy</a></li>#}
 {#                                </ul>#}
                                 Copyright &copy; {% now "Y" %} FIMCO Limited. All Rights Reserved.<br>
-                                <a href="{% url 'site' 'terms' %}">Terms &amp; Conditions</a>
+{#                                <a href="{% url 'site' 'terms' %}">Terms &amp; Conditions</a>#}
 {#                                FIMCO Limited is an authorised financial services provider<br>#}
 {#                                licensed by the Capital Market Security Authority.#}
                             </div>
