--- a/fimco/fimcosite/templates/brokerage.html
+++ b/fimco/fimcosite/templates/brokerage.html
@@ -15,7 +15,7 @@
                         <h2>Brokerage</h2>
                     </div>
                     <p>
-                        As Licensed Dealing Members (LDM) we offer our clients access to equities listed on the
+                        We offer our clients access to equities listed on the
                         Dar es salaam (DSE), Nairobi Stock Exchange (NSE) and Uganda Securities Exchange (USE).
                     </p>
                     <p>
