--- a/fimco/fimcosite/templates/corporate.html
+++ b/fimco/fimcosite/templates/corporate.html
@@ -397,6 +397,7 @@
                                                         <div class="col-lg-4 col-md-4 col-sm-4">
                                                             <label>ID Number *</label>
                                                             {{ wizard.form.id_number }}
+                                                            <small class="text-muted block" id="hint"></small>
                                                             {% if wizard.form.id_number.errors %}
                                                                 {% for error in wizard.form.id_number.errors %}
                                                                     <div class="alert alert-mini alert-danger mb-30">
