--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -41,7 +41,7 @@
 
 	<body class="smoothscroll enable-animation">
 
-		{% include "top-bar.html" %}
+{#		{% include "top-bar.html" %}#}
 
 		<!-- wrapper -->
 		<div id="wrapper">
