--- a/fimco/fimcosite/templates/contact.html
+++ b/fimco/fimcosite/templates/contact.html
@@ -51,7 +51,7 @@
                                 <div class="col-lg-6 col-xs-12 col-centered">
                                     <div class="alert alert-info mb-30 text-center">
                                         <p><strong>{{ message }}</strong>
-                                        <button type="button" class="btn btn-success mt-10" data-dismiss="alert">OK</button>
+                                        <button type="button" class="btn btn-primary mt-10" data-dismiss="alert">OK</button>
                                     </div>
                                 </div>
                             {% else %}
