--- a/fimco/fimcosite/templates/registration.html
+++ b/fimco/fimcosite/templates/registration.html
@@ -10,11 +10,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="col-xs-12 col-centered">
-                        <div class="alert alert-success mb-30">
-                            <button type="button" class="close" data-dismiss="alert">
-                                <span aria-hidden="true">×</span>
-                                <span class="sr-only">Close</span>
-                            </button>
+                        <div class="alert alert-success mb-30 text-center">
                             <h4>Congratulations! <strong>Registration successful!</strong></h4>
                             <p>{{ message }}</p>
                             <a href="{% url 'index' %}" class="btn btn-success btn-sm mt-10">OK</a>
