--- a/fimco/pochi/templates/pochi/account.html
+++ b/fimco/pochi/templates/pochi/account.html
@@ -25,11 +25,7 @@
                 {% if messages %}
                     {% for message in messages %}
                         <div class="col-xs-12">
-                            <div class="alert alert-success margin-bottom-30">
-                                <button type="button" class="close" data-dismiss="alert">
-                                    <span aria-hidden="true">×</span>
-                                    <span class="sr-only">Close</span>
-                                </button>
+                            <div class="alert alert-success margin-bottom-30 text-center">
                                 <strong>{{ message }}</strong>
                                 <button type="button" class="btn btn-success" data-dismiss="alert">OK</button>
                             </div>
@@ -61,12 +57,6 @@
 
                             <label>Account name
                                 <input type="text" class="form-control" name="name" >
-                            </label>
-
-                            <br />
-
-                            <label>Alias account name <small>(short name)</small>
-                                <input type="text" class="form-control" name="nickname" >
                             </label>
 
                             <br />
