--- a/fimco/pochi/templates/pochi/create_group.html
+++ b/fimco/pochi/templates/pochi/create_group.html
@@ -11,11 +11,7 @@
                     {% for message in messages %}
                         {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
                             <div class="col-lg-6 col-xs-12 col-centered">
-                                <div class="alert alert-danger margin-bottom-30">
-                                    <button type="button" class="close" data-dismiss="alert">
-                                        <span aria-hidden="true">×</span>
-                                        <span class="sr-only">Close</span>
-                                    </button>
+                                <div class="alert alert-danger margin-bottom-30 text-center">
                                     <p><strong>{{ message }}</strong></p>
                                     <button type="button" class="btn btn-danger" data-dismiss="alert">OK</button>
                                 </div>
