--- a/fimco/fimcosite/templates/contact.html
+++ b/fimco/fimcosite/templates/contact.html
@@ -182,7 +182,7 @@
 {#                        <hr />#}
                         <p>
                             <span class="block"><strong><i class="fa fa-map-marker"></i> Address:</strong><br> Office #205<br> 2nd Floor Jangid Plaza<br> Plot No. G6, Chaburuma Road, Off. Ali Hassan Mwinyi Road<br> Dar Es Salaam, Tanzania.</span>
-                            <span class="block"><strong><i class="fa fa-phone"></i> Phone:</strong> <a href="tel:255789123456">+255 22 292627 / +255 767 211690</a></span>
+                            <span class="block"><strong><i class="fa fa-phone"></i> Phone:</strong> <a href="tel:+255767211690">+255 22 292627 / +255 767 211690</a></span>
                             <span class="block"><strong><i class="fa fa-envelope"></i> Email:</strong> <a href="mailto:info@fimco.co.tz">info@fimco.co.tz</a></span>
                         </p>
                         <hr />
