--- a/fimco/pochi/templates/pochi/main.html
+++ b/fimco/pochi/templates/pochi/main.html
@@ -309,7 +309,7 @@
                         {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO and message.extra_tags %}
                             <div class="row">
                                 <div class="col-lg-6 col-xs-12 col-centered">
-                                    <div class="alert alert-info margin-bottom-30">
+                                    <div class="alert alert-info margin-bottom-30 text-center">
                                         <p><strong>{{ message }}</strong></p>
                                         <button type="button" class="btn btn-info" data-dismiss="alert">OK</button>
                                     </div>
