--- a/fimco/fimcosite/templates/top-bar.html
+++ b/fimco/fimcosite/templates/top-bar.html
@@ -1,40 +1,40 @@
 <!-- Top Bar -->
 <div id="topBar" class="dark">
-{#    <div class="container">#}
-{#        <!-- right -->#}
-{#        <ul class="top-links list-inline float-right">#}
-{#            {% if user.is_authenticated %}#}
-{#                <li class="text-welcome">Welcome, <strong>{{ user.get_short_name }}</strong></li>#}
-{#                <li>#}
-{#                    <a class="no-text-underline" href="{% url 'pochi' %}"><i class="et-wallet"></i> PLATFORM</a>#}
-{#                </li>#}
-{#                <li id="login"><a href="{% url 'logout' %}?next={{request.path}}">LOGOUT</a></li>#}
-{#            {% else %}#}
-{#                <li id="login"><a href="{% url 'login' %}?next={{request.path}}">LOGIN</a></li>#}
-{#                <li id="invest"><a href="" data-toggle="modal" data-target="#accountTypeModal">REGISTER</a></li>#}
-{#            {% endif %}#}
-{#            <li>#}
-{#                <a class="dropdown-toggle no-text-underline" data-toggle="dropdown" href="#">#}
-{#                    <img class="flag-lang" src="/static/img/flags/us.png" width="16" height="11" alt="lang" />#}
-{#                    ENGLISH#}
-{#                </a>#}
-{#                <ul class="dropdown-langs dropdown-menu">#}
-{#                    <li>#}
-{#                        <a tabindex="-1" href="#">#}
-{#                            <img class="flag-lang" src="/static/img/flags/tz.png" width="16" height="11" alt="lang" />#}
-{#                            SWAHILI#}
-{#                        </a>#}
-{#                    </li>#}
-{#                    <li class="divider"></li>#}
-{#                    <li>#}
-{#                        <a tabindex="-1" href="#">#}
-{#                            <img class="flag-lang" src="/static/img/flags/us.png" width="16" height="11" alt="lang" />#}
-{#                            ENGLISH#}
-{#                        </a>#}
-{#                    </li>#}
-{#                </ul>#}
-{#            </li>#}
-{#        </ul>#}
-{#    </div>#}
+    <div class="container">
+        <!-- right -->
+        <ul class="top-links list-inline float-right">
+            {% if user.is_authenticated %}
+                <li class="text-welcome">Welcome, <strong>{{ user.get_short_name }}</strong></li>
+                <li>
+                    <a class="no-text-underline" href="{% url 'pochi' %}"><i class="et-wallet"></i> PLATFORM</a>
+                </li>
+                <li id="login"><a href="{% url 'logout' %}?next={{request.path}}">LOGOUT</a></li>
+            {% else %}
+                <li id="login"><a href="{% url 'login' %}?next={{request.path}}">LOGIN</a></li>
+                <li id="invest"><a href="" data-toggle="modal" data-target="#accountTypeModal">REGISTER</a></li>
+            {% endif %}
+            <li>
+                <a class="dropdown-toggle no-text-underline" data-toggle="dropdown" href="#">
+                    <img class="flag-lang" src="/static/img/flags/us.png" width="16" height="11" alt="lang" />
+                    ENGLISH
+                </a>
+                <ul class="dropdown-langs dropdown-menu">
+                    <li>
+                        <a tabindex="-1" href="#">
+                            <img class="flag-lang" src="/static/img/flags/tz.png" width="16" height="11" alt="lang" />
+                            SWAHILI
+                        </a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <a tabindex="-1" href="#">
+                            <img class="flag-lang" src="/static/img/flags/us.png" width="16" height="11" alt="lang" />
+                            ENGLISH
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </div>
 <!-- /Top Bar -->
